# trilogy-save-editor

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  InnoSetup.iss  Makefile  Makefile.toml  README.md  Trunk.toml  build.rs  index.css  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: CI.yml  macos.yml  ubuntu.yml  windows.yml
010 templates/: me1_leg_save.bt  me2_save.bt
app/: Cargo.toml  build.rs
app/src/: auto_update.rs  init.js  initialization.js  main.rs  rpc_handler.rs  webview2_install.ps1
app/src/rpc/: command.rs  dialog.rs  mod.rs
app/src/rpc_handler/: command.rs  dialog.rs  mod.rs
app/src/rpc_handler/command/: dialog.rs
app/src/windows/: auto_update.rs  mod.rs
backend/: Cargo.toml
backend/src/: lib.rs
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs
databases/: me1_item_db.ron  me1_le_player_class_db.ron  me1_plot_db.ron  me1_raw_plot_db.ron  me2_plot_db.ron  me2_raw_plot_db.ron  me3_plot_db.ron  me3_raw_plot_db.ron
imhex/: me1_save_pattern.hexproj  me2_save_pattern.hexproj  me3_save_pattern.hexproj
macros/: Cargo.toml
macros/src/: lib.rs  raw_ui.rs  rcize.rs
misc/010 templates/: me1_state.bt  me3_save.bt
plot/: Me1KnownPlot.ron  Me2KnownPlot.ron  Me3KnownPlot.ron  me1_known_plot.ron  me2_known_plot.ron  me3_known_plot.ron  plot.csv  plot.db
public/: index.css
raw_ui_derive/: Cargo.toml
raw_ui_derive/src/: lib.rs
save_data_derive/: Cargo.toml
save_data_derive/src/: lib.rs
serializable_derive/: Cargo.toml
serializable_derive/src/: lib.rs
src/: compare.rs  databases.rs  event_handler.rs  gui.rs  main.rs  mass_effect_3.rs  save_data.rs  serializer.rs  ui.rs
src/agents/: database_service.rs  mod.rs  rpc.js  rpc.rs  save_handler.rs
src/gui/: app.rs  backend.rs  changelog.rs  imgui_utils.rs  mass_effect_1.rs  mass_effect_1_le.rs  mass_effect_1_leg.rs  mass_effect_2.rs  mass_effect_3.rs  mod.rs  raw_ui.rs  shared.rs  support.rs  widget_utils.rs
src/gui/component/: check_box.rs  color_picker.rs  input_number.rs  input_text.rs  mod.rs  nav_bar.rs  raw_ui_option.rs  raw_ui_struct.rs  select.rs  tab_bar.rs  table.rs
src/gui/component/raw_ui/: mod.rs  raw_ui_enum.rs  raw_ui_guid.rs  raw_ui_index_map.rs  raw_ui_option.rs  raw_ui_struct.rs  raw_ui_vec.rs
src/gui/components/: auto_update.rs  check_box.rs  clipper.rs  color_picker.rs  helper.rs  input_number.rs  input_text.rs  mod.rs  nav_bar.rs  select.rs  tab_bar.rs  table.rs
src/gui/components/raw_ui/: raw_ui_enum.rs  raw_ui_guid.rs  raw_ui_index_map.rs  raw_ui_option.rs  raw_ui_struct.rs  raw_ui_vec.rs
src/gui/components/shared/: bonus_powers.rs  mod.rs  plot.rs  plot_category.rs  raw_plot.rs
src/gui/mass_effect_1/: general.rs  mod.rs  plot.rs  raw_plot.rs
src/gui/mass_effect_1/raw_data/: mod.rs  property.rs
src/gui/mass_effect_1_le/: bonus_talents.rs  general.rs  mod.rs
src/gui/mass_effect_1_le/inventory/: item_select.rs  mod.rs
src/gui/mass_effect_2/: general.rs  me2_general.rs  mod.rs  plot.rs  raw_plot.rs
src/gui/mass_effect_3/: general.rs  mod.rs  plot.rs  plot_variable.rs  raw_plot.rs
src/gui/shared/: bonus_powers.rs  head_morph.rs  link.rs  mod.rs  plot_category.rs  raw_plot.rs
src/gui_old/: mass_effect_1.rs  mass_effect_1_le.rs  mass_effect_2.rs  mass_effect_3.rs  mod.rs  raw_ui.rs  shared.rs
src/mass_effect_3/: appearance.rs  galaxy_map.rs  guid.rs  player.rs  squad.rs  uninteresting.rs  variables.rs
src/save_data/: common.rs  crc32.rs  mass_effect_1.rs  mass_effect_2.rs  mass_effect_3.rs  mod.rs
src/save_data/common/: appearance.rs  mod.rs  player.rs  plot.rs
src/save_data/mass_effect_1/: data.rs  export.rs  item_db.rs  known_plot.rs  mod.rs  player.rs  plot_db.rs  state.rs
src/save_data/mass_effect_1_le/: item_db.rs  mod.rs  player.rs  player_class_db.rs  squad.rs
src/save_data/mass_effect_1_le/legacy/: art_placeable.rs  inventory.rs  mod.rs  pawn.rs
src/save_data/mass_effect_1_leg/: mod.rs  player.rs  squad.rs
src/save_data/mass_effect_2/: galaxy_map.rs  known_plot.rs  mod.rs  player.rs  plot.rs  plot_db.rs  squad.rs
src/save_data/mass_effect_3/: galaxy_map.rs  known_plot.rs  mod.rs  player.rs  plot.rs  plot_db.rs  squad.rs
src/save_data/shared/: appearance.rs  mod.rs  player.rs  plot.rs
src/services/: database.rs  drop_handler.rs  mod.rs  rpc.js  rpc.rs  save_handler.rs
src/ui/: support.rs
src/unreal/: deserializer.rs  mod.rs  serializer.rs
templates/: me1_leg_save.bt  me1_player.bt  me1_save_template.bt  me3_save.bt
test/: Char_01-60-3-2-2-21-2-2017-57-32.MassEffectSave  Clare00_QuickSave.MassEffectSave  GibbedME2.me2headmorph  GibbedME3.me3headmorph  ME1Export.MassEffectSave  ME1Le00_QuickSave.pcsav  ME1LeExport.pcsav  ME1Leg00_QuickSave.pcsav  ME1Leg00_QuickSave.uncompressed  ME1Save.MassEffectSave  ME2LegSave.pcsav  ME2Save.pcsav  ME2Save360.xbsav  ME3Save.pcsav  ME3Save360.xbsav  serialized.pcsav
test/Clare00_AutoSave/: WorldSavePackage.sav  player.sav  player.upk  state.sav
test/Clare00_QuickSave/: WorldSavePackage.sav  player.sav  state.sav
