[package]
name = "trilogy-save-editor"
version = "2.1.2"
authors = ["Karlitos"]
license = "CECILL-2.1"
edition = "2018"

[profile.release]
lto = true

[workspace]
members = ["macros", "app"]

[build-dependencies]
regex = "1.0"

[dependencies]
# Karlitos
macros = { path = "macros" }
# Std-like
anyhow = "1.0"
derive_more = { version = "0.99", features = [
    "deref",
    "deref_mut",
    "display",
    "from",
], default-features = false }
bitvec = { version = "0.22", features = ["std"], default-features = false }
indexmap = { version = "1.6", features = ["std"], default-features = false }
encoding_rs = { version = "0.8", default-features = false }
# Sync
# flume = { version = "0.10", features = ["async"], default-features = false }
# Utils
crc = "2.0"
flate2 = { version = "1.0", features = [
    "rust_backend",
], default-features = false }
zip = { version = "0.5", features = ["deflate"], default-features = false }
uuid = "0.8"
ryu = "1.0"
base64 = "0.13"
# Wasm
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
# wasm-timer = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "CustomEvent",
    "DataTransfer",
    "DomRect",
    "History",
    "PopStateEvent",
    "PopStateEventInit",
] }
gloo = { version = "0.3", features = ["futures"], default-features = false }
# (De)Serialization
serde-wasm-bindgen = "0.3"
serde = { version = "1.0", features = ["derive"], default-features = false }
ron = { version = "0.6", features = ["indexmap"], default-features = false }
# Yew
yew = { git = "https://github.com/yewstack/yew/", rev = "60c08736f1034f9402dddae4335584c103ffd7f0", default-features = false }
yew-agent = { git = "https://github.com/yewstack/yew/", rev = "60c08736f1034f9402dddae4335584c103ffd7f0" }
