[package]
name = "trilogy-save-editor"
version = "2.2.1"
authors = ["Karlitos"]
license = "CECILL-2.1"
edition = "2021"
rust-version = "1.56.0"

[profile.release]
lto = true

[workspace]
members = ["macros", "app"]

[build-dependencies]
regex = "1.0"

[dependencies]
# Karlitos
macros = { path = "macros" }
# Std-like
anyhow = "1.0"
derive_more = { version = "0.99", features = [
    "deref",
    "deref_mut",
    "display",
    "from",
], default-features = false }
bitvec = { version = "1.0", features = ["std"], default-features = false }
indexmap = { version = "=1.7", features = [
    "std",
], default-features = false } # FIXME: remove `=` when indexmap panic on release will be fixed
encoding_rs = "0.8"
# Sync
# flume = { version = "0.10", features = ["async"], default-features = false }
# Utils
crc = "2.0"
flate2 = { version = "1.0", features = [
    "rust_backend",
], default-features = false }
zip = { version = "0.5", features = ["deflate"], default-features = false }
uuid = "0.8"
ryu = "1.0"
base64 = "0.13"
# Wasm
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
# wasm-timer = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "CustomEvent",
    "DataTransfer",
    "DomRect",
    "DomTokenList",
    "History",
    "PopStateEvent",
    "PopStateEventInit",
] }
gloo = { version = "0.6", features = ["futures"], default-features = false }
# (De)Serialization
serde-wasm-bindgen = "0.4"
serde = { version = "1.0", features = ["derive"], default-features = false }
ron = { version = "0.7", features = ["indexmap"], default-features = false }
# Yew
yew = "0.19"
