[package]
name = "app"
version = "2.0.0"
edition = "2018"

[[bin]]
name = "trilogy-save-editor"
path = "src/main.rs"

[dependencies]
# Std-like
anyhow = "1.0"
# Async
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "sync",
    "parking_lot",
    "macros",
    "fs",
    "io-util",
    "process",
], default-features = false }
parking_lot = "0.11"
# Utils
lazy_static = "1.0"
clap = "2.0"
mime_guess = "2.0"
rust-embed = { version = "6.0", default-features = false }
dirs = "3.0"
rfd = "0.4"
base64 = "0.13"
opener = "0.5"
# Http
reqwest = { version = "0.11", features = ["json"] }
# (De)Serialize
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
# WebView
wry = { version = "0.12", features = ["protocol"], default-features = false }
