[package]
name = "app"
version = "2.1.2"
edition = "2021"
rust-version = "1.56.0"

[[bin]]
name = "trilogy-save-editor"
path = "src/main.rs"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"

[dependencies]
# Std-like
anyhow = "1.0"
# Async
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "sync",
    "parking_lot",
    "macros",
    "fs",
    "io-util",
    "process",
], default-features = false }
parking_lot = "0.11"
# Utils
lazy_static = "1.0"
clap = "2.0"
mime_guess = "2.0"
rust-embed = { version = "6.0", default-features = false }
dirs = "4.0"
rfd = "0.5"
base64 = "0.13"
opener = "0.5"
image = { version = "0.23", features = ["png"], default-features = false }
# Http
reqwest = { version = "0.11", features = ["json"] }
# (De)Serialize
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
# WebView
wry = { version = "0.12", features = ["protocol"], default-features = false }
