[package]
name = "backend"
version = "1.0.0"
authors = ["Karlitos"]
license = "CeCILL-2.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "parking_lot",
], default-features = false }
# Dear ImGui
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs", features = ["winit-25"], default-features = false}
imgui-wgpu = { git = "https://github.com/KarlitosVII/imgui-wgpu-rs" }
wgpu = "0.8"
winit = "0.25"
clipboard = "0.5"
