[package]
name = "save_data_derive"
version = "0.1.0"
authors = ["Karlitos <ke0opt4cq@relay.firefox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"